# MHM

./: CMakeLists.txt  CTestConfig.cmake  ConfigCasesMaze.h  MHMDFN_Functions.geo  MHM_Compare.cpp  Poisson_coef.txt  README.md  heteroElast.cpp  main.cpp  mainElast.cpp  mainMHMFunctions.cpp  mainMaze.cpp  main_MHM_HDiv.cpp  main_MHM_HDiv_elast.cpp  main_MHM_HDiv_elastHetero.cpp  meshgen.cpp  meshgen.h  mhm_hdiv_heterogeneous_elast_exec.txt  mhmelast_exec.txt  spacebased_exec.txt  young_modulus.txt
Data_13_Set/: VE.txt  VPoisso.txt  Vden.txt  Vvp.txt  Vvs.txt
